swagger doc updated
